--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -8,13 +8,8 @@
     "theme_color": "#3498db",
     "icons": [
       {
-        "src": "/icon.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "/icon512.png",
-        "sizes": "512x512",
+        "src": "/logo.png",
+        "sizes": "120x138",
         "type": "image/png"
       }
     ]
