fix: manifest.json

--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#3498db",
     "icons": [
       {
-        "src": "/assets/logo.png",
+        "src": "/src/assets/logo.png",
         "sizes": "120x138",
         "type": "image/png"
       }
